fixed spacing issue: form was overlapping with navbar

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -12,6 +12,6 @@ body {
 }
 
 header {
-  margin-bottom: 5%;
+  margin-bottom: 10%;
 }
 
